--- a/creargifo.html
+++ b/creargifo.html
@@ -7,18 +7,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./estilos/estilos.css">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
     <title>GIFOS</title>
 </head>
 
 <body id="body">
 
     <header>
-
-        <div class="linea-violeta"></div>
-
+        <div class="renglon-violeta"></div>
         <div class="navbar">
-
             <img src="./assets/logo-mobile.svg" alt="Logo" id="logo">
             <img src="./assets/logo-desktop.svg" alt="Logo" id="logo-desktop">
 
@@ -44,23 +42,17 @@
                     </ul>
                 </div>
             </nav>
-
         </div>
-
     </header>
 
     <main>
-
         <section class="main-mobile">
-
-            <h2>Entrá a esta página desde una computadora con cámara y crea tus propios <span class="gifos-turquesa">GIFOS!</span></h2>
-
+            <h2>Entrá a esta página desde una computadora con cámara y crea tus propios <span
+                    class="gifos-turquesa">GIFOS!</span></h2>
         </section>
 
         <section class="main-creargifo">
-
             <div class="ilus-grabar-contenedor">
-
                 <div class="div-camara">
                     <img src="./assets/camara.svg" alt="camara" id="camara-ilustracion">
                     <img src="./assets/element-luz-camara.svg" alt="luz camara" id="luz-camara">
@@ -68,7 +60,6 @@
 
                 <div class="div-grabacion">
                     <div class="recuadro-grabacion">
-
                         <div class="esquina1"></div>
                         <div class="esquina2"></div>
                         <div class="esquina3"></div>
@@ -90,60 +81,44 @@
                                     <img src="./assets/loader.svg" alt="loading gifo" id="overlay-video-icon">
                                     <p id="overlay-video-parrafo">Estamos subiendo tu GIFO</p>
                                 </div>
-
                             </div>
 
                             <video src="" id="grabacion-video"></video>
                             <img src="" alt="" id="gif-grabado">
-
                         </div>
-
                     </div>
-
                     <div>
                         <div class="crear-pasos">
-
                             <p id="creargifo-pasos-numero">1</p>
                             <p id="creargifo-pasos-numero">2</p>
                             <p id="creargifo-pasos-numero">3</p>
-
                         </div>
 
                         <div class="contador-contenedor">
                             <p id="contador-grabacion">0:00:00</p>
                             <button id="contador-repetircaptura">repetir captura</button>
                         </div>
-
                     </div>
                 </div>
 
                 <div class="div-pelicula">
                     <img src="./assets/pelicula.svg" alt="rollo pelicula" id="pelicula-ilus">
                 </div>
-
             </div>
 
             <div class="divisor-creargifo"></div>
 
             <div class="botones-creargifo-contenedor">
-
                 <button id="btn-creargifo-comenzar" class="btn-generico">comenzar</button>
                 <button id="btn-creargifo-grabar" class="btn-generico">grabar</button>
                 <button id="btn-creargifo-finalizar" class="btn-generico">finalizar</button>
                 <button id="btn-creargifo-subirgifo" class="btn-generico">subir gifo</button>
-
             </div>
-
         </section>
-
-        
-
     </main>
 
     <footer>
-
         <div class="datos">
-
             <div class="footer-redes">
                 <p>Compartir en:</p>
                 <div class="redes-iconos-contenedor">
@@ -162,6 +137,7 @@
                         <img src="./assets/icon_instagram.svg" alt="Instagram" class="icon">
                         <img src="./assets/icon_instagram-hover.svg" alt="Instagram" class="icon-hover">
                     </a>
+
                 </div>
             </div>
 
@@ -170,11 +146,12 @@
             </div>
 
         </div>
-        <div class="linea-violeta"></div>
 
+        <div class="renglon-violeta"></div>
     </footer>
 
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
     <script src="./scripts/creargifo.js"></script>
     <script src="./scripts/modo-nocturno.js"></script>
 </body>
+</html>
