--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:wght@300;400;500;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./estilos/estilos.css">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
     <title>GIFOS</title>
 </head>
 
 <body id="body">
 
     <header>
-
-        <div class="linea-violeta"></div>
-
+        <div class="renglon-violeta"></div>
         <div class="navbar">
-
             <img src="./assets/logo-mobile.svg" alt="Logo GifOs" id="logo">
             <img src="./assets/logo-desktop.svg" alt="Logo GifOs" id="logo-desktop">
 
@@ -44,17 +41,12 @@
                     </ul>
                 </div>
             </nav>
-
         </div>
-
     </header>
 
     <main>
-
         <section class="main-header">
-
             <h1>Inspírate, busca, guarda y crea los mejores <span class="gifos">GIFOS</span></h1>
-
             <div class="buscador-contenedor">
                 <img src="./assets/ilustra_header.svg" alt="Ilustración Header">
 
@@ -74,11 +66,9 @@
                                 class="icon-cerrar-busqueda">
                         </button>
                     </div>
-
                     <ul class="buscador-sugerencias" id="buscador-sugerencias">
                     </ul>
                 </div>
-
             </div>
 
             <div class="trending-sugerencias">
@@ -87,20 +77,16 @@
             </div>
 
             <div id="resultados-busqueda-contenedor" class="resultados-busqueda-contenedor">
-
                 <h2 id="titulo-busqueda" class="titulo-busqueda"></h2>
-
                 <div id="resultados-busqueda" class="resultados-busqueda">
                 </div>
 
                 <button id="resultados-vermas" class="btn-generico">ver más</button>
 
             </div>
-
         </section>
 
         <section class="trending">
-
             <h2>Trending GIFOS</h2>
             <p class="trending-text">Mira los últimos GIFOS de nuestra comunidad.</p>
 
@@ -120,17 +106,13 @@
                     <img src="./assets/button-right.svg" alt="derecha" class="next-violeta">
                     <img src="./assets/button-right-blanco.svg" alt="derecha" class="next-blanco">
                 </div>
-
             </div>
-
         </section>
 
     </main>
 
     <footer>
-
         <div class="datos">
-
             <div class="footer-redes">
                 <p>Compartir en:</p>
                 <div class="redes-iconos-contenedor">
@@ -152,10 +134,8 @@
             <div class="footer-copyright">
                 <p>© GIFOS 2020 All Rights Reserved.</p>
             </div>
-
         </div>
-        <div class="linea-violeta"></div>
-
+        <div class="renglon-violeta"></div>
     </footer>
 
 
@@ -164,5 +144,4 @@
     <script src="./scripts/trending-slide.js"></script>
     <script src="./scripts/modo-nocturno.js"></script>
 </body>
-
 </html>
