--- a/misgifos.html
+++ b/misgifos.html
@@ -7,7 +7,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./estilos/estilos.css">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
     <title>GIFOS</title>
 </head>
 
@@ -15,10 +16,8 @@
 
     <header>
 
-        <div class="linea-violeta"></div>
-
+        <div class="renglon-violeta"></div>
         <div class="navbar">
-
             <img src="./assets/logo-mobile.svg" alt="Logo" id="logo">
             <img src="./assets/logo-desktop.svg" alt="Logo" id="logo-desktop">
 
@@ -44,50 +43,32 @@
                     </ul>
                 </div>
             </nav>
-
         </div>
-
     </header>
 
     <main>
-
         <section class="header-misgifos">
-
             <img src="./assets/icon-mis-gifos.svg" alt="misgifos">
-
             <h1>Mis GIFOS</h1>
-
         </section>
 
         <section id="misgifos-vacio">
-
             <img src="./assets/icon-mis-gifos-sin-contenido.svg" alt="mis gifos sin contenido">
             <h3>¡Animate a crear tu primer GIFO!</h3>
-
         </section>
 
 
         <section id="misgifos-creados">
-
             <div class="resultados-misgifos" id="resultados-misgifos">
-
-
-
             </div>
-
-
-
         </section>
 
 
-
         <section class="trending">
-
             <h2>Trending GIFOS</h2>
             <p class="trending-text">Mira los últimos GIFOS de nuestra comunidad.</p>
 
             <div class="trending-slider-contenedor">
-
                 <div class="slider-prev" id="trending-btn-previous">
                     <img src="./assets/button-left.svg" alt="izquierda" class="prev-violeta">
                     <img src="./assets/button-left-blanco.svg" alt="izquierda" class="prev-blanco">
@@ -102,17 +83,12 @@
                     <img src="./assets/button-right.svg" alt="derecha" class="next-violeta">
                     <img src="./assets/button-right-blanco.svg" alt="derecha" class="next-blanco">
                 </div>
-
             </div>
-
         </section>
-
     </main>
 
     <footer>
-
         <div class="datos">
-
             <div class="footer-redes">
                 <p>Compartir en:</p>
                 <div class="redes-iconos-contenedor">
@@ -137,9 +113,9 @@
             <div class="footer-copyright">
                 <p>© GIFOS 2020 All Rights Reserved.</p>
             </div>
-
         </div>
-        <div class="linea-violeta"></div>
+        
+        <div class="renglon-violeta"></div>
 
     </footer>
 
@@ -148,3 +124,4 @@
     <script src="./scripts/trending-slide.js"></script>
     <script src="./scripts/modo-nocturno.js"></script>
 </body>
+</html>
